--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://mohaned:12345@cluster0.vc7kc0x.mongodb.net/gymApp?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://"username:password"@cluster0.vc7kc0x.mongodb.net/gymApp?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=supersecretkey123
 EMAIL_USER=mohaned
 EMAIL_PASS=12345
